fix overflow in mobile design

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 :root {
     --main-color: coral;
 }
@@ -18,7 +22,7 @@
     }
 }
 
-body, header, .headerContainer, .aboutMe, .photo, .icons,  main, .projectName, footer, .footerPicture, .container, .tel, .mail, .from {
+body, header, .headerContainer, .aboutMe, .photo, .icons,  main, .projectName, .project, footer, .footerPicture, .container, .tel, .mail, .from {
     display: flex;
 }
 
@@ -28,6 +32,7 @@ body {
     font-style: normal;
     font-size: 1.3rem;
     margin: 0;
+    overflow-x: hidden;
 }
 
 header {
@@ -75,8 +80,8 @@ header {
    -1px  1px 0 #ffffff,
     1px  1px 0 #ffffff;
     position: absolute;
-    top: 55%;
-    left: 15%;
+    top: 50%;
+    left: 20%;
     font-size: clamp(0.5rem, 1.7rem, 2.5rem);
 }
 
@@ -102,6 +107,7 @@ main {
 }
 
 .project {
+    flex-direction: column;
     animation: zoomIn 1s ease-in-out 1s;
     animation-fill-mode: backwards;
     max-width: 300px;
@@ -167,6 +173,7 @@ footer {
     justify-content: center;
     align-items: center;
     background-color: var(--main-color);
+    margin: 0;
 }
 
 .footerPicture > img {
@@ -215,6 +222,9 @@ footer {
 
 
 @media (max-width: 500px) { 
+    * {
+        font-size: 1rem;
+    }
     header {
         min-height: 80vh;
         background: linear-gradient(166deg, var(--main-color) 35%, white 30%);
@@ -232,13 +242,26 @@ footer {
         box-shadow: none;
     }
     .name {
-        top: 38%;
+        top: 22%;
         left: 25%;
+    }
+    .project {
+        width: 90vw;
     }
     footer {
         flex-wrap: wrap;
+        padding: 0%;
     }
-
+    .contact {
+        max-width: 90vw;
+    }
+    .footerPicture > img {
+        max-width: 100vw;
+    }
+    .mail > img, .tel > img {
+        display: none;
+        
+    }
   }
 
   
